# neonatox-mkinitramfs

./: .gitignore  HOOKS.md  README.html  README.md  meson.build
data/: init.in  mkinitramfs.conf
data/hooks/pre-binaries/: 50-plymouth
src/: lsinitramfs  mkinitramfs
